wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: LoadBalancer
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 8080            # Port on which the service will be exposed internally
      targetPort: 8081    # Port on which the container is listening
