ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: a0a089d4501624a579cc78c98c9e7285-2027520448.eu-north-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow-service
            port:
              number: 8080
  tls:
  - hosts:
    - a0a089d4501624a579cc78c98c9e7285-2027520448.eu-north-1.elb.amazonaws.com
    secretName: wisecow-tls
